--- a/GianHang.html
+++ b/GianHang.html
@@ -50,8 +50,8 @@
                         <thead>
                             <tr>
                                 <th>Tên SP</th>
-                                <th>SL</th>
-                                <th>TT</th>
+                                <th>Số lượng</th>
+                                <th>Đơn giá</th>
                             </tr>
                         </thead>
                         <tbody id="Picked">
@@ -72,7 +72,7 @@
     <div class="modal fade" id="khach-hang">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <form id="myForm" onsubmit="addProduct(event)">
+                <form id="myForm" onsubmit="inHoaDon()">
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h4 class="modal-title">Thông tin khách hàng</h4>
@@ -109,6 +109,7 @@
             </div>
         </div>
     </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
