--- a/GianHang.html
+++ b/GianHang.html
@@ -38,13 +38,6 @@
                 </ul>
             </div>
             <div class="col-4">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Nhập số điện thoại" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">+</button>
-                    </div>
-                </div>
-                <button class="btn btn-primary" id="buttonOK">Đồng ý</button>
                 <div>
                     <table class="table">
                         <thead>
@@ -102,7 +95,7 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-outline-success">Lưu</button>
+                        <button type="submit" class="btn btn-outline-success" onclick="save()">Lưu</button>
                         <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Hủy</button>
                     </div>
                 </form>
